# asciibee

./: .gitignore  README.md  pyproject.toml
asciibee/: constants.py  convert.py  main.py
